--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-hook-form": "^7.24.0",
     "react-router-dom": "^6.1.1",
     "react-scripts": "4.0.3",
+    "swr": "^1.2.2",
     "tailwindcss": "^3.0.1",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
@@ -26,6 +27,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-router-dom": "^5.3.3",
     "autoprefixer": "^10.4.0",
     "nodemon": "2.0.15",
     "postcss-cli": "^9.1.0"
