--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,8 @@
     "strict": true,
     "forceConsistentCasingInFileNames": true,
     "noFallthroughCasesInSwitch": true,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
     "module": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
