updating git action

--- a/.github/workflows/update-staging.yml
+++ b/.github/workflows/update-staging.yml
@@ -15,12 +15,18 @@ jobs:
       - name: Updating System
         run: sudo apt-get install -f
       - uses: actions/checkout@v2
-      - name: Creating build
-        run: npm i && npm run build
-      - name: Sending build to server
-        uses: ./.github/actions/send-build
+      - name: Creating image
+        run: docker build -t ${{ env.image }} .
+      - name: Sending image to server
+        uses: ./.github/actions/send-image
         with:
-          destinationFolder: management
-          buildFolder: ./build
+          image: ${{ env.image }}
+          destination: ${{ secrets.STAGING_DESTINATION }}
+          key: ${{ secrets.STAGING_KEY }}
+      - name: Starting Image
+        uses: ./.github/actions/start-image
+        with:
+          service: management
+          image: ${{ env.image }}
           destination: ${{ secrets.STAGING_DESTINATION }}
           key: ${{ secrets.STAGING_KEY }}
