--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "management",
-  "homepage": "/management",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -35,7 +34,7 @@
   "scripts": {
     "start": "PORT=80 react-scripts start",
     "dev": "npm start",
-    "build": "CI=false react-scripts build",
+    "build": "NODE_OPTIONS=--openssl-legacy-provider react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "watch-css": "nodemon -w ./src -e tsx -x npm run css",
