--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@types/moment": "^2.13.0",
     "axios": "^0.24.0",
     "databaseApi": "file:../databaseApi/build",
     "dotenv": "^10.0.0",
+    "moment": "^2.29.3",
     "object-to-formdata": "^4.4.1",
     "postcss": "^8.4.4",
     "react": "^17.0.2",
